--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -69,12 +69,12 @@
         </button>
       </div>
       <tr *ngFor="let record2 of viewusers"></tr>
-     
+
       <div class="modal-body mx-6">
         <div class="form-group row">
           <label class="col-4 col-form-label font-weight-nobold">User ID</label>
           <label class="col-form-label font-weight-nobold">:</label>
-          <div class="col-4"><input type="text" class="form-control" value="{{record2.UserId}}"></div>
+          <div class="col-4"><input type="text" class="form-control" value=""></div>
         </div>
         <div class="form-group row">
           <label class="col-4 col-form-label font-weight-nobold">Nama User</label>
