--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -74,27 +74,27 @@
         <div class="form-group row">
           <label class="col-4 col-form-label font-weight-nobold">User ID</label>
           <label class="col-form-label font-weight-nobold">:</label>
-          <div class="col-4"><input type="text" class="form-control" value=""></div>
+          <div class="col-4"><input type="text" class="form-control" value="{{userid}}"></div>
         </div>
         <div class="form-group row">
           <label class="col-4 col-form-label font-weight-nobold">Nama User</label>
           <label class="col-form-label font-weight-nobold">:</label>
-          <div class="col-7"><input type="text" class="form-control"></div>
+          <div class="col-7"><input type="text" class="form-control" value="{{nama}}"></div>
         </div>
         <div class="form-group row">
           <label class="col-4 col-form-label font-weight-nobold">Login Terakhir</label>
           <label class="col-form-label font-weight-npbold">:</label>
-          <div class="col-7"><input type="text" class="form-control"></div>
+          <div class="col-7"><input type="text" class="form-control" value="{{loginAkhir}}"></div>
         </div>
         <div class="form-group row">
           <label class="col-4 col-form-label font-weight-nobold">Logout Terakhir</label>
           <label class="col-form-label font-weight-nobold">:</label>
-          <div class="col-7"><input type="text" class="form-control"></div>
+          <div class="col-7"><input type="text" class="form-control" value="{{logoutAkhir}}"></div>
         </div>
         <div class="form-group row">
           <label class="col-4 col-form-label font-weight-nobold">Status</label>
           <label class="col-form-label font-weight-nobold">:</label>
-          <div class="col-4"><input type="text" class="form-control"></div>
+          <div class="col-4"><input type="text" class="form-control" value="{{status}}"></div>
         </div>
         <div class="form-group row">
           <label class="col-4 col-form-label font-weight-nobold">Kode Departemen</label>
@@ -108,4 +108,3 @@
     </div>
   </div>
 </div>
-
