--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -63,7 +63,7 @@
   <div class="modal-dialog"  role="document">
     <div class="modal-content">
       <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+        <h4 class="modal-title w-100 font-weight-bold">Lihat Data</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="basicModal.hide()">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -72,38 +72,38 @@
 
       <div class="modal-body mx-6">
         <div class="form-group row">
-          <label class="col-4 col-form-label font-weight-nobold">User ID</label>
-          <label class="col-form-label font-weight-nobold">:</label>
+          <label class="col-4 col-form-label">User ID</label>
+          <label class="col-form-label ">:</label>
           <div class="col-4"><input type="text" class="form-control" value="{{userid}}"></div>
         </div>
         <div class="form-group row">
-          <label class="col-4 col-form-label font-weight-nobold">Nama User</label>
-          <label class="col-form-label font-weight-nobold">:</label>
+          <label class="col-4 col-form-label ">Nama User</label>
+          <label class="col-form-label ">:</label>
           <div class="col-7"><input type="text" class="form-control" value="{{nama}}"></div>
         </div>
         <div class="form-group row">
-          <label class="col-4 col-form-label font-weight-nobold">Login Terakhir</label>
+          <label class="col-4 col-form-label ">Login Terakhir</label>
           <label class="col-form-label font-weight-npbold">:</label>
-          <div class="col-7"><input type="text" class="form-control" value="{{loginAkhir}}"></div>
+          <div class="col-7"><input type="text" class="form-control" value="{{logAkhir}}"></div>
         </div>
         <div class="form-group row">
-          <label class="col-4 col-form-label font-weight-nobold">Logout Terakhir</label>
-          <label class="col-form-label font-weight-nobold">:</label>
+          <label class="col-4 col-form-label ">Logout Terakhir</label>
+          <label class="col-form-label ">:</label>
           <div class="col-7"><input type="text" class="form-control" value="{{logoutAkhir}}"></div>
         </div>
         <div class="form-group row">
-          <label class="col-4 col-form-label font-weight-nobold">Status</label>
-          <label class="col-form-label font-weight-nobold">:</label>
+          <label class="col-4 col-form-label ">Status</label>
+          <label class="col-form-label ">:</label>
           <div class="col-4"><input type="text" class="form-control" value="{{status}}"></div>
         </div>
         <div class="form-group row">
-          <label class="col-4 col-form-label font-weight-nobold">Kode Departemen</label>
-          <label class="col-form-label font-weight-nobold">:</label>
-          <div class="col-4"><input type="text" class="form-control"></div>
+          <label class="col-4 col-form-label ">Kode Departemen</label>
+          <label class="col-form-label ">:</label>
+          <div class="col-4"><input type="text" class="form-control" value="{{kodeDep}}"></div>
         </div>
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button mdbBtn color="default" class="waves-light" mdbWavesEffect>Login</button>
+        <button mdbBtn color="default" class="waves-light" mdbWavesEffect>Ubah</button>
       </div>
     </div>
   </div>
