--- a/src/app/administrative/aktifitasuser/aktifitasuser.component.html
+++ b/src/app/administrative/aktifitasuser/aktifitasuser.component.html
@@ -5,7 +5,7 @@
     <div id="outer" class="d-flex flex-column flex-grow">
       <div class="card konten">
         <div class="card-body">
-          <h5 class="card-title">Daftar Aktifitas User</h5>
+          <h5 class="text-primary font-weight-bold">Daftar Aktifitas User</h5>
           <!--panel 1-->
           <div class="card">
             <div class="card-body">
