--- a/src/app/teller-in/teller-in-setoran-tunai/teller-in-setoran-tunai.component.html
+++ b/src/app/teller-in/teller-in-setoran-tunai/teller-in-setoran-tunai.component.html
@@ -4,7 +4,7 @@
         <div id="outer" class="d-flex flex-column">
           <div class="card konten">
             <div class="card-body">
-              <h5>Transaksi Setoran Tunai</h5>
+              <h5 class="text-primary font-weight-bold">Transaksi Setoran Tunai</h5>
       
               <mdb-card>
                 <mdb-card-body>
