--- a/src/app/teller-in/teller-in-sinkron-fin/teller-in-sinkron-fin.component.html
+++ b/src/app/teller-in/teller-in-sinkron-fin/teller-in-sinkron-fin.component.html
@@ -4,7 +4,7 @@
     <div id="outer" class="d-flex flex-column">
       <div class="card konten">
         <div class="card-body">
-          <h5>Sinkronisasi Transaksi Financial Retail</h5>
+          <h5 class="text-primary font-weight-bold">Sinkronisasi Transaksi Financial Retail</h5>
   
           <mdb-card>
             <mdb-card-body>
