--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -20,7 +20,7 @@
           <li>Status</li>
           <li class="font-weight-bold text-info">Online</li>
           <li>IP Anda </li>
-          <li class="font-weight-bold text-info">{{tanggal | date:'dd/MM/yyyy hh:mm'}}</li>
+          <li class="font-weight-bold text-info">127.0.0.1</li>
         </ul>
       </div>
     </div>
