--- a/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
+++ b/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
@@ -48,7 +48,7 @@
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
+              <div class="col-3"><input type="text" class="form-control" currencyMask [(ngModel)]="value" [options]="{ prefix: 'Rp ', thousands: '.', precision: 0}"></div>
               <span class="col-6"></span>
             </div>
             <!--input 4-->
@@ -76,9 +76,9 @@
               <div class="col-3">
                 <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 250px;">
                   <option selected>Pilih Salah Satu</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
+                  <option value="1">Taspen 1</option>
+                  <option value="2">Taspen 2</option>
+                  <option value="3">Taspen 3</option>
                 </select>
               </div>
             </div>
