--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/purple-green.css';
 
+html {
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+  width: 100%;
+}
+
 body {
   background-image: url(assets/image/material-img/backgroundWb.png);
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  min-height: 70vh;
+  min-height: 100%;
 }
 
 header {
@@ -19,13 +26,23 @@ header {
 }
 
 main {
-  min-height: 50vh;
+  /* max-height: 100%;
+  max-width: 100%;
   margin-top: 20vh;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  min-width: 700px;
+  min-width: 700px; */
+  margin: 0px;
+  right: 0px;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 footer {
@@ -58,4 +75,39 @@ footer {
   font-size: 0.44rem;
   margin-top: -5px;
   margin-bottom: -4px;
+}
+
+/* ------------------------------------- */
+/*                  LOGIN                */
+/* ------------------------------------- */
+/* .card {
+  position: relative;
+  margin-bottom: 0px;
+  min-width: 100%;
+  min-height: 100%;
+  padding: 0;
+} */
+
+/* .card-login {
+  max-width: 100%;
+  max-height: 100%;
+} */
+
+.row {
+  display: none;
+}
+
+div.card-login div.card {
+  border-top-width: 200px;
+  margin-top: 140px;
+  height: 685px;
+}
+
+#style-login {
+  margin-top: 140px;
+  height: 690px;
+}
+
+.card-header {
+  height: 95px;
 }
