--- a/src/app/teller-in/teller-in-tran-pindah-buku/teller-in-tran-pindah-buku.component.html
+++ b/src/app/teller-in/teller-in-tran-pindah-buku/teller-in-tran-pindah-buku.component.html
@@ -1,88 +1,87 @@
 <!--Main layout-->
 <div class="m-3 h-100">
-    <!-- Start your project here-->
-    <div id="outer" class="d-flex flex-column">
-        <div class="card konten">
-            <div class="card-body">
-                <h5 class="text-primary font-weight-bold">Transaksi Pemindahbukuan Tanpa Cek</h5>
+  <!-- Start your project here-->
+  <div id="outer" class="d-flex flex-column">
+    <div class="card konten">
+      <div class="card-body">
+        <h5 class="text-primary font-weight-bold">Transaksi Pemindahbukuan Tanpa Cek</h5>
 
-                <mdb-card>
-                    <mdb-card-body>
+        <mdb-card>
+          <mdb-card-body>
 
-                        <!--input 1-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">Tanggal Valuta</label>
-                            <label class="col-form-label pr-0 font-weight-bold">:</label>
-                            <div class="col-3 form-inline">
-                                <div class="input-group">
-                                    <input class="form-control" [matDatepicker]="picker" placeholder="Tanggal Valuta">
-                                    <mat-datepicker #picker></mat-datepicker>
-                                    <div class="input-group-append">
-                                        <button mat-raised-button (click)="picker.open()" class="form-control"><i class="fa fa-calendar"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!--input 1-->
-                        <!--input 2-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">Nomor Referensi</label>
-                            <label class="col-form-label pr-0  font-weight-bold">:</label>
-                            <div class="col-3"><input type="text" class="form-control"></div>
-                            <span class="col-6"></span>
-                        </div>
-                        <!--input 2-->
-                        <!--input 3-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">No Rekening Debit</label>
-                            <label class="col-form-label pr-0  font-weight-bold">:</label>
-                            <div class="col-3"><input type="text" class="form-control"></div>
-                            <span class="col-6"></span>
-                        </div>
-                        <!--input 3-->
-                        <!--input 4-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">No Rekening Kredit</label>
-                            <label class="col-form-label pr-0  font-weight-bold">:</label>
-                            <div class="col-3"><input type="text" class="form-control"></div>
-                            <span class="col-6"></span>
-                        </div>
-                        <!--input 4-->
-                        <!--input 5-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi</label>
-                            <label class="col-form-label pr-0  font-weight-bold">:</label>
-                            <div class="col-3"><input type="text" class="form-control"></div>
-                            <span class="col-6"></span>
-                        </div>
-                        <!--input 5-->
-                        <!--input 6-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">Kode Departemen</label>
-                            <label class="col-form-label pr-0  font-weight-bold">:</label>
-                            <label class="col-2 col-form-label  font-weight-bold">DC</label>
-                            <span class="col-6"></span>
-                        </div>
-                        <!--input 6-->
-                        <!--input 7-->
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label  font-weight-bold">Keterangan</label>
-                            <label class="col-form-label pr-0  font-weight-bold">:</label>
-                            <span></span>
-                            <div class="col-4"><textarea rows="4" cols="50" class="form-control"></textarea></div>
-                            <span class="col-6"></span>
-                        </div>
-                        <!--input 7-->
-                        <div class="d-flex justify-content-center">
-                            <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
-                            <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
-                        </div>
-                    </mdb-card-body>
-                </mdb-card>
-
-                <span style="height: 10vh;"></span>
+            <!--input 1-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Tanggal Valuta</label>
+              <label class="col-form-label pr-0 font-weight-bold">:</label>
+              <div class="col-3 form-inline">
+                <div class="input-group">
+                  <input class="form-control" [matDatepicker]="picker" placeholder="Tanggal Valuta">
+                  <mat-datepicker #picker></mat-datepicker>
+                  <div class="input-group-append">
+                    <button mat-raised-button (click)="picker.open()" class="form-control"><i class="fa fa-calendar"></i></button>
+                  </div>
+                </div>
+              </div>
             </div>
-        </div>
-    </div>
+            <!--input 1-->
+            <!--input 2-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Nomor Referensi</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input 2-->
+            <!--input 3-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">No Rekening Debit</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input 3-->
+            <!--input 4-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">No Rekening Kredit</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input 4-->
+            <!--input 5-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control" currencyMask [(ngModel)]="value" [options]="{ prefix: 'Rp ', thousands: '.', precision: 0}"></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input 5-->
+            <!--input 6-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Kode Departemen</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <label class="col-2 col-form-label  font-weight-bold">DC</label>
+              <span class="col-6"></span>
+            </div>
+            <!--input 6-->
+            <!--input 7-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Keterangan</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <span></span>
+              <div class="col-4"><textarea rows="4" cols="50" class="form-control"></textarea></div>
+              <span class="col-6"></span>
+            </div>
+            <!--input 7-->
+            <div class="d-flex justify-content-center">
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+            </div>
+          </mdb-card-body>
+        </mdb-card>
 
+        <span style="height: 10vh;"></span>
+      </div>
+    </div>
+  </div>
 </div>
