--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/purple-green.css';
-
+html{
+  min-height: 100%;
+  height: 100%;
+}
 body {
   background-image: url(assets/image/background.png);
   background-attachment: fixed;
   position: relative;
-  min-height: 70vh;
+  min-height: 100%;
+  height: 100%;
 }
 
 header {
