--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!--Footer-->
-<footer class="navbar fixed-bottom justify-content-center" *ngIf="!isDashboard" >
-  <div class="text-body">
+<footer class="navbar fixed-bottom justify-content-center" *ngIf="!isDashboard">
+  <div class="text-body" id="f-style">
     Copyright &copy; 2018: <a href="/login" class="text-muted"> &ensp;&ensp; Bank Pembangunan Daerah
       Jawa Tengah (Bank Jateng)</a>All Right Reserved.
   </div>
