--- a/src/styles.css
+++ b/src/styles.css
@@ -6,19 +6,21 @@ html {
   min-width: 100%;
   height: 100%;
   width: 100%;
+  z-index: 0;
 }
 
 body {
-  background-image: url(assets/image/material-img/backgroundWb.png);
+  background-image: url(assets/image/material-img/backgroundLogin.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   min-height: 100%;
+  z-index: 0;
 }
 
 header {
-  height: 140px;
+  height: 120px;
   background-color: #234a7b;
   background-repeat: no-repeat;
   background-size: cover;
@@ -51,6 +53,7 @@ footer {
   background-repeat: no-repeat;
   background-size: cover;
   background-color: rgba(255, 255, 255, 10%);
+  z-index: 99999;
 }
 
 .flex-grow {
@@ -80,34 +83,37 @@ footer {
 /* ------------------------------------- */
 /*                  LOGIN                */
 /* ------------------------------------- */
-/* .card {
-  position: relative;
-  margin-bottom: 0px;
-  min-width: 100%;
-  min-height: 100%;
-  padding: 0;
+
+
+div.container-fluid#style-card2 {
+  padding-left: 0;
+  padding-right: 0;
+
+}
+
+/* div.card-header#bg-opacity {
+
 } */
 
-/* .card-login {
-  max-width: 100%;
-  max-height: 100%;
-} */
-
-.row {
-  display: none;
+#style-cardHeader {
+  top: 50px;
+  margin-right: 300px;
+  margin-left: 200px;
+  opacity: 0.7;
+  border: 20px;
 }
 
-div.card-login div.card {
-  border-top-width: 200px;
-  margin-top: 140px;
-  height: 685px;
+.bg-main {
+  margin-top: 120px;
+  background-image: url(../src/assets/image/material-img/HeaderWb.png);
+  height: 105px;
 }
 
-#style-login {
-  margin-top: 140px;
-  height: 690px;
-}
 
-.card-header {
-  height: 95px;
+/* ------------------------------------- */
+/*                  FOOTER               */
+/* ------------------------------------- */
+
+#f-style {
+  color: #234a7b;
 }
